--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link href="" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/bootstrapCSS/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -67,9 +67,29 @@
 
     <main>
       <h1>Welcome to The Auction</h1>
-
+       <div class="loginErrorMessage"></div>
+<div class="listingsCards">
+        <div class="listingsImg"></div>
+      </div>
  
       </div>
+      <nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
     </main>
     <footer>
       <ul class="footer-ul">
@@ -110,6 +130,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/api.js"></script>
   </body>
 </html>
