--- a/login.html
+++ b/login.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link href="" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/bootstrapCSS/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -148,6 +151,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="/js/script.js"></script>
   </body>
 </html>
