adding all files besides files in gitignore

--- a/my_page.html
+++ b/my_page.html
@@ -74,16 +74,16 @@
           <a href="/index.html" class="footer-link">Home</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">Listings</a>
+          <a href="/index.html" class="footer-link">Listings</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">My page</a>
+          <a href="/my_page.html" class="footer-link">My page</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">Create listing</a>
+          <a href="/create_listing.html" class="footer-link">Create listing</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">Register</a>
+          <a href="/register.html" class="footer-link">Register</a>
         </li>
       </ul>
       <div class="footerinfo">
