--- a/my_page.html
+++ b/my_page.html
@@ -31,7 +31,7 @@
               <a class="nav-link active" aria-current="page" href="/index.html"
                 >Home</a
               >
-              <a class="nav-link" href="/listings.html">Listings</a>
+              <a class="nav-link" href="/index.html">Listings</a>
               <a class="nav-link" href="/login.html">Login</a>
             </div>
           </div>
