updates to register and login pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </div>
           </div>
           <div class="nav-elements">
-            <i class="bi bi-person text-primary"></i>
+            <a href="/my_page.html"  class="my-page-icon-link">
+            <i class="bi bi-person text-primary"></i></a>
 
             <button
               class="navbar-toggler"
