--- a/login.html
+++ b/login.html
@@ -39,7 +39,9 @@
             </div>
           </div>
           <div class="nav-elements">
-            <i class="bi bi-person text-primary"></i>
+            <a href="/my_page.html" class="my-page-icon-link">
+              <i class="bi bi-person text-primary"></i
+            ></a>
 
             <button
               class="navbar-toggler"
@@ -95,16 +97,12 @@
             <input type="password" class="form-control" id="password" />
           </div>
           <div class="mb-3 form-check">
-            <input
-              type="checkbox"
-              class="form-check-input"
-              id="exampleCheck1"
-            />
-            <label class="form-check-label" for="exampleCheck1"
-              >Subscripe to our newsletter</label
-            >
+            <div class="register-link">
+              <p>Not registered?</p>
+              <a href="/register.html" class="login-link">Register here</a>
+            </div>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Log in</button>
         </form>
       </div>
     </main>
