--- a/single_listing.html
+++ b/single_listing.html
@@ -36,7 +36,9 @@
             </div>
           </div>
           <div class="nav-elements">
-            <i class="bi bi-person text-primary"></i>
+            <a href="/my_page.html" class="my-page-icon-link">
+              <i class="bi bi-person text-primary"></i
+            ></a>
 
             <button
               class="navbar-toggler"
@@ -66,7 +68,7 @@
     </header>
 
     <main>
-      <h1>My Page</h1>
+      <h1>Single listing</h1>
     </main>
     <footer>
       <ul class="footer-ul">
