--- a/register.html
+++ b/register.html
@@ -36,7 +36,9 @@
             </div>
           </div>
           <div class="nav-elements">
-            <i class="bi bi-person text-primary"></i>
+            <a href="/my_page.html" class="my-page-icon-link">
+              <i class="bi bi-person text-primary"></i
+            ></a>
 
             <button
               class="navbar-toggler"
@@ -66,7 +68,52 @@
     </header>
 
     <main>
-      <h1>My Page</h1>
+      <h1>Register</h1>
+      <div class="loginErrorMessage"></div>
+      <div class="register-form">
+        <form>
+          <div class="mb-3">
+            <label for="input-name" class="form-label">Name</label>
+            <input
+              type="name"
+              class="form-control"
+              id="name"
+              aria-describedby="nameHelp"
+            />
+            <div id="nameHelp" class="form-text"></div>
+          </div>
+          <div class="mb-3">
+            <label for="input-email" class="form-label">Email address</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              aria-describedby="emailHelp"
+            />
+            <div id="emailHelp" class="form-text">
+              We'll never share your email with anyone else.
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="input-password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" />
+          </div>
+          <div class="mb-3 form-check">
+            <div class="subscribe-checkbox">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+
+              <label class="form-check-label" for="newletter-check"
+                >Subscripe to our newsletter</label
+              >
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+      </div>
     </main>
     <footer>
       <ul class="footer-ul">
@@ -107,6 +154,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <!-- <script type="module" src="js/api.js"></script> -->
+    <script type="module" src="js/script.js"></script>
   </body>
 </html>
