adding aldready a user link

--- a/register.html
+++ b/register.html
@@ -111,6 +111,11 @@
               >
             </div>
           </div>
+          <div class="already-user">
+            <a href="/login.html" class="already-user-link"
+              >Already a user? Login here</a
+            >
+          </div>
           <button type="submit" class="btn btn-primary">Register</button>
         </form>
       </div>
