update to single-listing page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 
     <main>
       <h1>Welcome to The Auction</h1>
+      <div id="listing-container"></div>
+
+
        <div class="loginErrorMessage"></div>
 <div class="listingsCards">
         <div class="listingsImg"></div>
