--- a/my_page.html
+++ b/my_page.html
@@ -69,6 +69,8 @@
 
     <main>
       <h1>My Page</h1>
+
+      <div id="listing-container"></div>
     </main>
     <footer>
       <ul class="footer-ul">
@@ -109,6 +111,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <!-- <script type="module" src="js/api.js"></script> -->
+    <script type="module" src="js/displayListings.js"></script>
   </body>
 </html>
