--- a/single_listing.html
+++ b/single_listing.html
@@ -68,7 +68,9 @@
     </header>
 
     <main>
-      <h1>Single listing</h1>
+      <h1 class="single-listing-heading">Single listing</h1>
+      <div id="listing-container"></div>
+      <h2 class="single-listing-description"></h2>
     </main>
     <footer>
       <ul class="footer-ul">
@@ -109,6 +111,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <!-- <script type="module" src="js/api.js"></script> -->
+    <script type="module" src="js/displayListings.js"></script>
   </body>
 </html>
