updates to burger menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+   
     <link rel="stylesheet" href="/css/style.css" />
     <title>Listings</title>
     <meta
@@ -51,6 +52,25 @@
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
+          <!-- <div class="mobile-menu">
+            <ul>
+              <li>
+                <a href="/index.html">Home</a>
+              </li>
+              <li>
+                <a href="/index.html">Login</a>
+              </li>
+              <li>
+                <a href="/index.html">Register</a>
+              </li>
+              <li>
+                <a href="/index.html">My Page</a>
+              </li>
+              <li>
+                <a href="/index.html">Listings</a>
+              </li>
+            </ul>
+          </div> -->
         </div>
       </nav>
       <form class="form-inline">
@@ -135,5 +155,6 @@
       </div>
     </footer>
     <script type="module" src="js/api.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
