updated to burger menu

--- a/index.html
+++ b/index.html
@@ -23,24 +23,23 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
+      <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">The Auction</a>
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav me-auto">
               <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link" href="/listings.html">Listings</a>
+              <a class="nav-link" href="/index.html">Listings</a>
               <a class="nav-link" href="/login.html"
                 >Login</a
               >
             </div>
           </div>
-          <div class="nav-elements">
+          <div class="nav-elements d-flex align-items-center ms-auto">
             <a href="/my_page.html"  class="my-page-icon-link">
             <i class="bi bi-person text-primary"></i></a>
-
-            <button
+          <button
               class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
@@ -51,26 +50,7 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-          </div>
-          <!-- <div class="mobile-menu">
-            <ul>
-              <li>
-                <a href="/index.html">Home</a>
-              </li>
-              <li>
-                <a href="/index.html">Login</a>
-              </li>
-              <li>
-                <a href="/index.html">Register</a>
-              </li>
-              <li>
-                <a href="/index.html">My Page</a>
-              </li>
-              <li>
-                <a href="/index.html">Listings</a>
-              </li>
-            </ul>
-          </div> -->
+            </div>
         </div>
       </nav>
       <form class="form-inline">
