--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="nav-elements d-flex align-items-center ms-auto">
-            <a href="/my_page.html"  class="my-page-icon-link">
+            <a href="" id="myPageLink" class="my-page-icon-link">
             <i class="bi bi-person text-primary"></i></a>
           <button
               class="navbar-toggler"
@@ -68,6 +68,7 @@
 
     <main>
       <h1>Welcome to The Auction</h1>
+      <div class="displayErrorMessage"></div>
       <div id="listing-container"></div>
 
 
@@ -101,16 +102,19 @@
           <a href="/index.html" class="footer-link">Home</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">Listings</a>
+          <a href="/index.html" class="footer-link">Listings</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">My page</a>
+          <a href="/my_page.html" class="footer-link">My page</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">Create listing</a>
+          <a href="/create_listing.html" class="footer-link">Create listing</a>
         </li>
         <li>
-          <a href="/listingsLogIn.html" class="footer-link">Register</a>
+          <a href="/register.html" class="footer-link">Register</a>
+        </li>
+        <li>
+          <a href="/login.html" class="footer-link">Login</a>
         </li>
       </ul>
       <div class="footerinfo">
@@ -134,7 +138,7 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <script type="module" src="js/api.js"></script>
+    <script type="module" src="js/displayAllListings.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
