--- a/logout.html
+++ b/logout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,8 +12,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Listings</title>
-    <meta name="description" content="This is the main page for The Auction." />
+    <title>Login</title>
+    <meta
+      name="description"
+      content="This is the login page for The Auction."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/d9c9e06b11.js"
@@ -28,11 +31,11 @@
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/index.html"
-                >Home</a
+              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="/listings.html">Listings</a>
+              <a class="nav-link active" aria-current="page" href="/login.html"
+                >Login</a
               >
-              <a class="nav-link" href="/index.html">Listings</a>
-              <a class="nav-link" href="/login.html">Login</a>
             </div>
           </div>
           <div class="nav-elements">
@@ -68,84 +71,9 @@
     </header>
 
     <main>
-      <h1>My Page</h1>
-      <button class="btn btn-primary" id="logout-btn">Log Out</button>
-       <div class="displayErrorMessage"></div>
-
-      <div id="listing-container"></div>
-      <div class="credit-container"></div>
-      <button class="btn btn-primary" id="update-avatar-btn">Update Avatar</button>
-      <div class="create-listing"></div>
-      <button class="btn btn-primary" id="create-listing-btn-test">Create Listing</button>
-      <div class="avatar-container"></div>
-      <div class="listings-by-profile"></div>
-
-      <div class="listing-form">
-        <h2>Upload New Listing</h2>
-        <form class="create-listing-form">
-          <div class="mb-3">
-            <label for="inputTitle" class="form-label">Title</label>
-            <input
-              type="text"
-              class="form-control"
-              id="createListingInputTitle"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="inputDescription" class="form-label"
-              >Description</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="createListingInputDescription"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="inputTags" class="form-label"
-              >Tags</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="createListingInputTags"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="inputImageUrl" class="form-label"
-              >Image URL</label
-            >
-            <input
-              type="url"
-              class="form-control"
-              id="createListingInputImageUrl"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="inputImageAlt" class="form-label"
-              >Image Text (Alt)</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="createListingInputImageAlt"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="inputDateEnd" class="form-label"
-              >Date for when auction ends</label
-            >
-            <input
-              type="datetime-local"
-              class="form-control"
-              id="createListingInputDateEnd"
-            />
-          </div>
-          
-          </div>
-          <button type="submit" class="btn btn-primary" id="create-listing-btn">Upload Listing</button>
-        </form>
-      </div>
+      <h1>You're logget out successfully.</h1>
+      <a href="/login.html" class="logBackIn">Log back in here</a>
+      <div class="displayErrorMessage"></div>
     </main>
     <footer>
       <ul class="footer-ul">
@@ -189,9 +117,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-     <script type="module" src="js/credits.js"></script>
-    <script type="module" src="js/createListing.js"></script>
-    <script type="module" src="js/logout.js"></script>
-
+    <script type="module" src="/js/logout.js"></script>
   </body>
 </html>
