--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="nav-elements">
-            <a href="/my_page.html" class="my-page-icon-link">
+            <a href="" id="myPageLink" class="my-page-icon-link">
               <i class="bi bi-person text-primary"></i
             ></a>
 
@@ -69,6 +69,7 @@
 
     <main>
       <h1>Register</h1>
+      <div class="displayErrorMessage"></div>
       <div class="loginErrorMessage"></div>
       <div class="register-form">
         <form>
@@ -137,6 +138,9 @@
         <li>
           <a href="/register.html" class="footer-link">Register</a>
         </li>
+        <li>
+          <a href="/login.html" class="footer-link">Login</a>
+        </li>
       </ul>
       <div class="footerinfo">
         <div class="social">
@@ -159,6 +163,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/register.js"></script>
   </body>
 </html>
