--- a/single_listing.html
+++ b/single_listing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="nav-elements">
-            <a href="/my_page.html" class="my-page-icon-link">
+            <a href="" id="myPageLink" class="my-page-icon-link">
               <i class="bi bi-person text-primary"></i
             ></a>
 
@@ -69,8 +69,12 @@
 
     <main>
       <h1 class="single-listing-heading">Single listing</h1>
+      <div class="notLoggedIn"></div>
       <div id="listing-container"></div>
+      <div class="displayErrorMessage"></div>
       <h2 class="single-listing-description"></h2>
+      <h3 class="single-listing-amount"></h3>
+      <h4 class="single-listing-bidder-name"></h4>
     </main>
     <footer>
       <ul class="footer-ul">
@@ -88,6 +92,9 @@
         </li>
         <li>
           <a href="/register.html" class="footer-link">Register</a>
+        </li>
+        <li>
+          <a href="/login.html" class="footer-link">Login</a>
         </li>
       </ul>
       <div class="footerinfo">
@@ -111,6 +118,6 @@
         <p class="copyright">©Copyright The Auction</p>
       </div>
     </footer>
-    <script type="module" src="js/displayListings.js"></script>
+    <script type="module" src="js/displaySingleListing.js"></script>
   </body>
 </html>
