pushing to main branch

--- a/my_page.html
+++ b/my_page.html
@@ -76,8 +76,7 @@
       <div class="credit-container"></div>
       <button class="btn btn-primary" id="update-avatar-btn">Update Avatar</button>
       <div class="create-listing"></div>
-      <button class="btn btn-primary" id="create-listing-btn-test">Create Listing</button>
-      <div class="avatar-container"></div>
+       <div class="avatar-container"></div>
       <div class="listings-by-profile"></div>
 
       <div class="listing-form">
@@ -144,6 +143,7 @@
           
           </div>
           <button type="submit" class="btn btn-primary" id="create-listing-btn">Upload Listing</button>
+        <div class="successInfo"></div>
         </form>
       </div>
     </main>
