--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">The Auction</a>
+          <a class="navbar-brand" href="/index.html">The Auction</a>
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav me-auto">
@@ -59,8 +59,9 @@
           type="search"
           placeholder="Search"
           aria-label="Search"
+          id="search-input"
         />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-btn">
           Search
         </button>
       </form>
@@ -78,23 +79,7 @@
       </div>
  
       </div>
-      <nav aria-label="Page navigation example">
-  <ul class="pagination">
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-      </a>
-    </li>
-  </ul>
-</nav>
+    
     </main>
     <footer>
       <ul class="footer-ul">
@@ -139,6 +124,7 @@
       </div>
     </footer>
     <script type="module" src="js/displayAllListings.js"></script>
+    <script type="module" src="js/searchListings.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
