--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     <header>
       <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">The Auction</a>
+          <a class="navbar-brand" href="/index.html">The Auction</a>
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
@@ -112,9 +112,6 @@
       <ul class="footer-ul">
         <li>
           <a href="/index.html" class="footer-link">Home</a>
-        </li>
-        <li>
-          <a href="/logout.html" class="footer-link">Logout</a>
         </li>
         <li>
           <a href="/index.html" class="footer-link">Listings</a>
