--- a/logout.html
+++ b/logout.html
@@ -27,7 +27,7 @@
     <header>
       <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">The Auction</a>
+          <a class="navbar-brand" href="/index.html">The Auction</a>
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
