--- a/single_listing.html
+++ b/single_listing.html
@@ -24,7 +24,7 @@
     <header>
       <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">The Auction</a>
+          <a class="navbar-brand" href="/index.html">The Auction</a>
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
@@ -70,11 +70,17 @@
     <main>
       <h1 class="single-listing-heading">Single listing</h1>
       <div class="notLoggedIn"></div>
+
       <div id="listing-container"></div>
+      <div class="post-new-bid">
+        <input type="number" class="input-new-bid" />
+        <button class="btn btn-primary" id="new-bid-btn">Place New Bid</button>
+      </div>
       <div class="displayErrorMessage"></div>
       <h2 class="single-listing-description"></h2>
       <h3 class="single-listing-amount"></h3>
       <h4 class="single-listing-bidder-name"></h4>
+      <h5 class="single-listing-bidder-name"></h5>
     </main>
     <footer>
       <ul class="footer-ul">
@@ -119,5 +125,6 @@
       </div>
     </footer>
     <script type="module" src="js/displaySingleListing.js"></script>
+    <script type="module" src="js/bidOnListing.js"></script>
   </body>
 </html>
